--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,10 @@ repositories {
 }
 
 dependencies {
+    compile 'org.sql2o:sql2o:1.6.0'
+    compile 'org.slf4j:slf4j-simple:1.7.29'
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'org.postgresql:postgresql:42.2.5'
+    compile 'com.sparkjava:spark-core:2.6.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile "com.sparkjava:spark-core:2.6.0"
-    compile 'org.slf4j:slf4j-simple:1.7.21'
-    compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4'
-    compile 'com.google.code.gson:gson:2.5'
 }
