--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,7 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.6.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+applicationName = "gitthecomeup3"
+mainClassName = 'Api'
+task stage(dependsOn: ['clean', 'installDist'])
